--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "publish": "ts-node-dev --notify false src/publisher.ts",
-    "listen": "ts-node-dev --notify false src/listner.ts"
+    "listen": "ts-node-dev --notify false src/listener.ts"
   },
   "keywords": [],
   "author": "",
